--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,40 +130,91 @@ pre code
 	overflow: auto;
 }
 
+#chat-normal-holder, #chat-code-holder
+{
+    position: relative;
+    height: 32px;
+    padding: 0 10px 0 10px;
+    border-top: 1px solid #888888;
+}
+
+#chat-normal-holder
+{
+    padding-right: 20px;
+}
+
+#chat-code-holder
+{
+    background: #272822;
+}
+
 .chat-time
 {
-	color: #888888;
-	font-size: 11px;
-	line-height: 19px;
+    color: #888888;
+    font-size: 11px;
+    line-height: 19px;
 }
 
 .chat-field
 {
-	width: 100%;
-	height: 30px;
-	padding: 0 10px;
-	background: #ffffff;
-	color: #333333;
-	border-top: 1px solid #888888;
-	border-left: none;
-	border-right: none;
-	border-bottom: none;
+    width: 100%;
+    height: 30px;
+    background: #ffffff;
+    color: #333333;
+    border: none;
 }
 
 #chat-code
 {
-	color: #ffffff;
-	background: #272822;
+    color: #ffffff;
+    background: #272822;
+}
+
+#open-smileys
+{
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20px;
+    line-height: 32px;
+}
+
+#smileys
+{
+    display: none;
+    position: absolute;
+    bottom: 33px;
+    right: 0;
+    width: 80px;
+    background: #ffffff;
+}
+
+#smileys ul
+{
+    overflow: hidden;
+}
+
+#smileys ul li
+{
+    float: left;
+    height: 19px;
+}
+
+#smileys ul li a
+{
+    padding: 3px 2px;
 }
 
 .notification
 {
-	color: #56bbe0;
+    color: #56bbe0;
 }
 
-pre code {
-  display: block;
-  background: #272822;
+pre code
+{
+    display: block;
+    background: #272822;
 }
 
 pre .tag,
@@ -177,22 +228,26 @@ pre .flow,
 pre .lisp .title,
 pre .clojure .built_in,
 pre .nginx .title,
-pre .tex .special {
-  color: #F92672;
+pre .tex .special
+{
+    color: #F92672;
 }
 
-pre code {
-  color: #DDD;
+pre code
+{
+  color: #dddddd;
 }
 
-pre code .constant {
-	color: #66D9EF;
+pre code .constant
+{
+    color: #66D9EF;
 }
 
 pre .code,
 pre .class .title,
-pre .header {
-	color: white;
+pre .header
+{
+    color: white;
 }
 
 pre .link_label,
@@ -200,8 +255,9 @@ pre .attribute,
 pre .symbol,
 pre .symbol .string,
 pre .value,
-pre .regexp {
-	color: #BF79DB;
+pre .regexp
+{
+    color: #BF79DB;
 }
 
 pre .link_url,
@@ -231,8 +287,9 @@ pre .envvar,
 pre .apache .tag,
 pre .apache .cbracket,
 pre .tex .command,
-pre .prompt {
-  color: #A6E22E;
+pre .prompt
+{
+    color: #A6E22E;
 }
 
 pre .comment,
@@ -246,8 +303,9 @@ pre .doctype,
 pre .deletion,
 pre .shebang,
 pre .apache .sqbracket,
-pre .tex .formula {
-  color: #75715E;
+pre .tex .formula
+{
+    color: #75715E;
 }
 
 pre .keyword,
@@ -268,8 +326,9 @@ pre .bash .variable,
 pre .apache .tag,
 pre .tex .special,
 pre .request,
-pre .status {
-  font-weight: bold;
+pre .status
+{
+    font-weight: bold;
 }
 
 pre .coffeescript .javascript,
@@ -278,8 +337,9 @@ pre .tex .formula,
 pre .xml .javascript,
 pre .xml .vbscript,
 pre .xml .css,
-pre .xml .cdata {
-  opacity: 0.5;
+pre .xml .cdata
+{
+    opacity: 0.5;
 }
 
 .accept-invite
